Name: kontrakcja
Version: 1.0
Author: Scrive
Copyright: 2010-2016
Stability: Experimental
Category: Web
Synopsis: Ultimate signing solution
Description: Sign documents online
Cabal-version: >= 1.18
Build-type: Simple

-- Note:
--
-- To allow warnings use command:
--
--    cabal configure --ghc-option=-Wwarn
--
-- Another useful command:
--
--    cabal configure --ghc-option=-fdefer-type-errors
--
--
-- Note about TemplateHaskell
--
-- Template Haskell is code that executes inside the compiler. It is
-- loaded from object *.o file that has to be compiled before.  This
-- object file must be a normal-vanilla one, not profiled. Here is
-- where trouble starts: since we want stack traces we want profiling
-- executables, but to build those template haskell normal ones need
-- to be loaded.
--
-- Cabal hacks around it by forcing vanilla compilation if it sees
-- TemplateHaskell in Extensions field. That is upside down, as
-- vanilla is needed for sources that *define* template Haskell
-- functions, although those source themselves do not use template
-- Haskell.
--
-- Whole mess results in double compilation and over twice the time
-- spent waiting. Possible way out is to:
-- - move modules that define template haskell function into separate
--   library, make everything else depend on it, enable TH there
-- - remove TH from extensions from everything else, add
--   LANGUAGE TemplateHaskell at the top of each file where it is used
-- - use TH only where it is trully needed
--

Flag server-coverage
  Description: Build server with coverage instrumentation
  Manual: True
  Default: False

Flag test-coverage
  Description: Collects tests coverage status
  Manual: True
  Default: False

Flag enable-routinglist
  Description: Enables building the routing list executable
  Manual: True
  Default: False

Library

  Hs-source-dirs: backend/cron/inc backend/cron/schema
                  backend/lib
                  backend/mailer/inc backend/mailer/schema backend/mailer/src
                  backend/messenger/inc backend/messenger/schema
                  backend/messenger/src
                  backend/migrate/inc
                  backend/misc/schema backend/misc/src
                  backend/server/schema backend/server/src

  GHC-Options: -Werror -Wall -fno-warn-type-defaults -fno-warn-deprecated-flags
  ghc-prof-options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls

  if impl(ghc > 8)
    GHC-options: -fno-warn-redundant-constraints
  if flag(server-coverage)
    GHC-Options: -fhpc

  -- Cabal workaround, remove after transition to ghc8.
  if impl(ghc < 8)
    Build-depends: unix == 2.7.1.0
  else
    Build-depends: unix == 2.7.2.0

  Exposed-modules: API.APIVersion
                 , API.Monad.V1
                 , API.V2
                 , API.V2.Errors
                 , API.V2.Monad
                 , API.V2.User
                 , ActionQueue.AccessNewAccount
                 , ActionQueue.Core
                 , ActionQueue.EmailChangeRequest
                 , ActionQueue.Monad
                 , ActionQueue.PasswordReminder
                 , ActionQueue.Scheduler
                 , ActionQueue.Tables
                 , ActionQueue.UserAccountRequest
                 , Administration.AddPaymentPlan
                 , Administration.AdministrationControl
                 , Administration.AdministrationView
                 , Amazon
                 , Amazon.Class
                 , Analytics.Include
                 , AppConf
                 , AppControl
                 , AppDBTables
                 , AppView
                 , Archive.Control
                 , Archive.View
                 , Attachment.AttachmentID
                 , Attachment.Control
                 , Attachment.JSON
                 , Attachment.Model
                 , Attachment.Tables
                 , BrandedDomain.BrandedDomain
                 , BrandedDomain.BrandedDomainID
                 , BrandedDomain.Model
                 , BrandedDomain.Tables
                 , Branding.Adler32
                 , Branding.CSS
                 , Branding.Cache
                 , Branding.Control
                 , Chargeable.Model
                 , Chargeable.Tables
                 , Company.CompanyControl
                 , Company.CompanyID
                 , Company.CompanyUI
                 , Company.Model
                 , Company.Tables
                 , CompanyAccounts.CompanyAccountsControl
                 , CompanyAccounts.CompanyAccountsView
                 , CompanyAccounts.Model
                 , CompanyAccounts.Tables
                 , Configuration
                 , Context
                 , Control.Monad.Trans.Control.Util
                 , Control.Monad.Trans.Instances
                 , Cookies
                 , Cron.Model
                 , Cron.Tables
                 , CronEnv
                 , Crypto
                 , Crypto.RNG
                 , Crypto.RNG.Class
                 , Crypto.RNG.Utils
                 , Database.Redis.Cache
                 , Database.Redis.Configuration
                 , Database.Redis.Helpers
                 , DB
                 , DB.Derive
                 , DB.PostgreSQL
                 , DB.Query
                 , DB.RowCache
                 , DB.SQLFunction
                 , DB.TimeZoneName
                 , DB.Utils
                 , DB.XML
                 , Data.ByteString.RFC2397
                 , Doc.API
                 , Doc.API.Callback.Data
                 , Doc.API.Callback.Execute
                 , Doc.API.Callback.Model
                 , Doc.API.Callback.Tables
                 , Doc.API.V1.Calls
                 , Doc.API.V1.DocumentFromJSON
                 , Doc.API.V1.DocumentToJSON
                 , Doc.API.V1.DocumentUpdateUtils
                 , Doc.API.V1.ListUtil
                 , Doc.API.V2
                 , Doc.API.V2.Calls
                 , Doc.API.V2.Calls.DocumentGetCalls
                 , Doc.API.V2.Calls.DocumentPostCalls
                 , Doc.API.V2.Calls.SignatoryCalls
                 , Doc.API.V2.Calls.SignatoryCallsUtils
                 , Doc.API.V2.DocumentAccess
                 , Doc.API.V2.DocumentUpdateUtils
                 , Doc.API.V2.Guards
                 , Doc.API.V2.JSON.AttachmentDetails
                 , Doc.API.V2.JSON.DisplayOptions
                 , Doc.API.V2.JSON.Document
                 , Doc.API.V2.JSON.DocumentViewer
                 , Doc.API.V2.JSON.Fields
                 , Doc.API.V2.JSON.List
                 , Doc.API.V2.JSON.Misc
                 , Doc.API.V2.JSON.Utils
                 , Doc.API.V2.Parameters
                 , Doc.Action
                 , Doc.Anchors
                 , Doc.AutomaticReminder.Model
                 , Doc.AutomaticReminder.Tables
                 , Doc.Class
                 , Doc.Conditions
                 , Doc.Data.AuthorAttachment
                 , Doc.Data.CheckboxPlacementsUtils
                 , Doc.Data.Document
                 , Doc.Data.DocumentStatus
                 , Doc.Data.DocumentTag
                 , Doc.Data.MainFile
                 , Doc.Data.HighlightedPage
                 , Doc.Data.SignatoryAttachment
                 , Doc.Data.SignatoryField
                 , Doc.Data.SignatoryFieldUtils
                 , Doc.Data.SignatoryLink
                 , Doc.DigitalSignature
                 , Doc.DocControl
                 , Doc.DocInfo
                 , Doc.DocMails
                 , Doc.DocSeal
                 , Doc.DocStateCommon
                 , Doc.DocStateData
                 , Doc.DocStateQuery
                 , Doc.DocUtils
                 , Doc.DocView
                 , Doc.DocViewMail
                 , Doc.DocViewSMS
                 , Doc.DocumentID
                 , Doc.DocumentMonad
                 , Doc.EvidenceAttachments
                 , Doc.Logging
                 , Doc.Model
                 , Doc.Model.Domain
                 , Doc.Model.Expressions
                 , Doc.Model.Filter
                 , Doc.Model.OrderBy
                 , Doc.Model.Query
                 , Doc.Model.Update
                 , Doc.RenderedPages
                 , Doc.Rendering
                 , Doc.SMSPin.Model
                 , Doc.SMSPin.Tables
                 , Doc.Screenshot
                 , Doc.SealSpec
                 , Doc.SealStatus
                 , Doc.Sealing.Consumer
                 , Doc.Sealing.Model
                 , Doc.Sealing.Tables
                 , Doc.SignatoryFieldID
                 , Doc.SignatoryIdentification
                 , Doc.SignatoryLinkID
                 , Doc.SignatoryScreenshots
                 , Doc.Signing.Consumer
                 , Doc.Signing.Model
                 , Doc.Signing.Tables
                 , Doc.Tables
                 , Doc.Texts
                 , Doc.Tokens.Model
                 , Doc.Tokens.Tables
                 , EID.Authentication.Model
                 , EID.Authentication.Tables
                 , EID.CGI.GRP.Config
                 , EID.CGI.GRP.Control
                 , EID.CGI.GRP.Data
                 , EID.CGI.GRP.Transaction.Model
                 , EID.CGI.GRP.Transaction.Tables
                 , EID.Nets.Config
                 , EID.Nets.Control
                 , EID.Nets.Data
                 , EID.Signature.Legacy
                 , EID.Signature.Model
                 , EID.Signature.Tables
                 , EvidenceLog.Model
                 , EvidenceLog.Tables
                 , EvidenceLog.View
                 , EvidencePackage.EvidenceLog
                 , EvidencePackage.EvidenceOfIntent
                 , EvidencePackage.EvidenceOfTime
                 , File.Conditions
                 , File.File
                 , File.FileID
                 , File.Model
                 , File.Storage
                 , File.Tables
                 , FlashMessage
                 , ForkAction
                 , GuardTime
                 , GuardTime.Class
                 , Happstack.Fields
                 , Happstack.Server.Instances
                 , Happstack.Server.ReqHandler
                 , HostClock.Collector
                 , HostClock.Model
                 , HostClock.System
                 , HostClock.Tables
                 , HubSpot.Conf
                 , IPAddress
                 , InputValidation
                 , InspectXML
                 , InspectXMLInstances
                 , Kontra
                 , KontraError
                 , KontraLink
                 , KontraMonad
                 , KontraPrelude
                 , LangRouting
                 , Log.Configuration
                 , Log.Identifier
                 , Log.Migrations
                 , Log.Model
                 , Log.Tables
                 , Log.Utils
                 , Login
                 , MagicHash
                 , MailContext
                 , MailContext.Class
                 , MailingServerConf
                 , Mails.Data
                 , Mails.Events
                 , Mails.MailsData
                 , Mails.Model
                 , Mails.SendMail
                 , Mails.Tables
                 , MemCache
                 , MessageData
                 , MessengerServerConf
                 , MinutesTime
                 , Network.SOAP.Call
                 , Network.SOAP.Transport.Curl
                 , OAuth.Control
                 , OAuth.Model
                 , OAuth.Parse
                 , OAuth.Tables
                 , OAuth.Util
                 , OAuth.View
                 , PDF.Matrix
                 , PDF.Model
                 , PadApplication.API
                 , Partner.API
                 , Partner.JSON
                 , Partner.Logging
                 , Partner.Model
                 , Partner.Partner
                 , Partner.PartnerID
                 , Partner.Tables
                 , Payments.Action
                 , Payments.Config
                 , Payments.Control
                 , Payments.JSON
                 , Payments.Model
                 , Payments.Rules
                 , Payments.Stats
                 , Payments.Tables
                 , Payments.View
                 , Purging.Files
                 , Redirect
                 , Routing
                 , RoutingTable
                 , SMS.Data
                 , SMS.Events
                 , SMS.Model
                 , SMS.SMS
                 , SMS.Tables
                 , Salesforce.AuthorizationWorkflow
                 , Salesforce.Conf
                 , Salesforce.Control
                 , ServerUtils.BrandedImagesCache
                 , ServerUtils.ServerUtils
                 , Session.Cookies
                 , Session.Data
                 , Session.Model
                 , Session.SessionID
                 , Session.Tables
                 , System.Random.CryptoRNG
                 , Templates
                 , Text.JSON.Convert
                 , Text.XML.Content
                 , Text.XML.DirtyContent
                 , Theme.Control
                 , Theme.Model
                 , Theme.Tables
                 , Theme.ThemeID
                 , Theme.View
                 , ThirdPartyStats.Core
                 , ThirdPartyStats.Mixpanel
                 , ThirdPartyStats.Tables
                 , ThirdPartyStats.Utils
                 , User.API
                 , User.Action
                 , User.CallbackScheme.Model
                 , User.CallbackScheme.Tables
                 , User.Email
                 , User.History.Model
                 , User.History.Tables
                 , User.Lang
                 , User.Model
                 , User.Password
                 , User.Tables
                 , User.UserControl
                 , User.UserID
                 , User.UserView
                 , User.Utils
                 , Util.Actor
                 , Util.CSVUtil
                 , Util.FinishWith
                 , Util.FlashUtil
                 , Util.HasSomeCompanyInfo
                 , Util.HasSomeUserInfo
                 , Util.MonadUtils
                 , Util.SignatoryLinkUtils
                 , Util.ZipUtil
                 , Util.Zlib
                 , Utils.Color
                 , Utils.Directory
                 , Utils.Either
                 , Utils.Enum
                 , Utils.Exception
                 , Utils.Font
                 , Utils.HTTP
                 , Utils.IO
                 , Utils.Image
                 , Utils.List
                 , Utils.Monad
                 , Utils.Monoid
                 , Utils.Network
                 , Utils.Prelude
                 , Utils.Read
                 , Utils.String
                 , Utils.TH
                 , Version
                 , VersionTH

  Build-depends: base
               , AES
               , Crypto
               , DRBG
               , Decimal
               , HStringTemplate
               , HTTP
               , HaXml
               , MissingH
               , QuickCheck
               , aeson
               , attoparsec
               , base16-bytestring
               , base64-bytestring
               , binary
               , bytestring
               , cond
               , conduit
               , consumers
               , containers
               , crypto-api
               , cryptohash
               , curl
               , data-default
               , hpqtypes-extras
               , deepseq
               , digest
               , directory
               , exceptions
               , explicit-exception
               , fields-json
               , filepath
               , free
               , hS3
               , happstack-server
               , happstack-static-routing
               , hashable
               , hedis
               , hpqtypes
               , http-types
               , iconv
               , invariant
               , json
               , JuicyPixels
               , kontrakcja-templates
               , lifted-async
               , lifted-base
               , lifted-threads
               , log >= 0.5.4
               , mixpanel
               , mmap
               , monad-control
               , monad-time
               , mtl
               , network
               , network-uri
               , process
               , process-extras
               , psqueues
               , random
               , recurly
               , regex-tdfa
               , resource-pool
               , scientific
               , semigroups
               , soap
               , split
               , spreadsheet
               , statistics
               , stm
               , tagsoup
               , template-haskell
               , temporary
               , text
               , threads
               , time
               , transformers
               , transformers-base
               , unix
               , unjson
               , unordered-containers
               , utf8-string
               , vector
               , xml-conduit
               , xml-conduit-writer
               , xml-types
               , yaml
               , zip-archive
               , zlib

  Default-Language: Haskell2010
  Default-Extensions: BangPatterns
                    , ConstraintKinds
                    , DeriveDataTypeable
                    , DeriveFunctor
                    , DeriveGeneric
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NamedFieldPuns
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , PatternGuards
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TupleSections
                    , TypeFamilies
                    , TypeOperators
                    , TypeSynonymInstances
                    , UndecidableInstances

Executable kontrakcja-server

  Hs-source-dirs: backend/server/src

  GHC-Options: -Werror -Wall -fno-warn-type-defaults -fno-warn-deprecated-flags
  GHC-Options: -threaded -rtsopts
  ghc-prof-options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls

  if impl(ghc > 8)
    GHC-options: -fno-warn-redundant-constraints
  if flag(server-coverage)
    GHC-Options: -fhpc

  Main-Is: Main.hs
  GHC-options: -main-is Main

  Build-depends: kontrakcja
               , base
               , bytestring
               , cmdargs
               , curl
               , hpqtypes-extras
               , exceptions
               , happstack-server
               , happstack-static-routing
               , hedis
               , lifted-base
               , log >= 0.5.4
               , text
               , transformers-base
               , utf8-string

  Default-Language: Haskell2010
  Default-Extensions: BangPatterns
                    , ConstraintKinds
                    , DeriveDataTypeable
                    , DeriveFunctor
                    , DeriveGeneric
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NamedFieldPuns
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , PatternGuards
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TupleSections
                    , TypeFamilies
                    , TypeOperators
                    , TypeSynonymInstances
                    , UndecidableInstances

Executable cron

  Hs-source-dirs: backend/cron/src

  GHC-Options: -Werror -Wall -fno-warn-type-defaults -fno-warn-deprecated-flags
  GHC-Options: -threaded -rtsopts
  ghc-prof-options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls

  if impl(ghc > 8)
    GHC-options: -fno-warn-redundant-constraints
  if flag(server-coverage)
    GHC-Options: -fhpc

  Build-depends: kontrakcja
               , base
               , bytestring
               , cmdargs
               , consumers
               , hpqtypes-extras
               , hedis
               , log >= 0.5.4
               , text
               , transformers-base

  Main-is: Cron.hs
  GHC-options: -main-is Cron

  Default-Language: Haskell2010
  Default-Extensions: BangPatterns
                    , ConstraintKinds
                    , DeriveDataTypeable
                    , DeriveFunctor
                    , DeriveGeneric
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NamedFieldPuns
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , PatternGuards
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TupleSections
                    , TypeFamilies
                    , TypeOperators
                    , TypeSynonymInstances
                    , UndecidableInstances

Executable kontrakcja-migrate

  Hs-source-dirs: backend/cron/schema
                  backend/mailer/schema
                  backend/messenger/schema
                  backend/migrate/inc backend/migrate/src
                  backend/misc/schema backend/misc/src
                  backend/server/schema

  GHC-Options: -Werror -Wall -fno-warn-type-defaults -fno-warn-deprecated-flags
  GHC-Options: -threaded -rtsopts
  ghc-prof-options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls

  if impl(ghc > 8)
    GHC-options: -fno-warn-redundant-constraints
  if flag(server-coverage)
    GHC-Options: -fhpc

  Main-is: AppDBMain.hs
  GHC-options: -main-is AppDBMain

  Build-depends: base
               , DRBG
               , HaXml
               , MissingH
               , aeson
               , base16-bytestring
               , base64-bytestring
               , binary
               , bytestring
               , cmdargs
               , cond
               , containers
               , crypto-api
               , cryptohash
               , data-default
               , hpqtypes-extras
               , exceptions
               , fields-json
               , hpqtypes
               , json
               , lifted-base
               , log >= 0.5.4
               , monad-control
               , monad-time
               , mtl
               , regex-tdfa
               , resource-pool
               , semigroups
               , stm
               , tagsoup
               , template-haskell
               , text
               , time
               , transformers-base
               , unjson
               , utf8-string
               , yaml

  Default-Language: Haskell2010
  Default-Extensions: BangPatterns
                    , ConstraintKinds
                    , DeriveDataTypeable
                    , DeriveFunctor
                    , DeriveGeneric
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NamedFieldPuns
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , PatternGuards
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TupleSections
                    , TypeFamilies
                    , TypeOperators
                    , TypeSynonymInstances
                    , UndecidableInstances

Executable mailing-server

  Hs-source-dirs: backend/mailer/inc backend/mailer/schema backend/mailer/src
                  backend/misc/schema backend/misc/src

  GHC-Options: -Werror -Wall -fno-warn-type-defaults -fno-warn-deprecated-flags
  GHC-Options: -threaded -rtsopts
  ghc-prof-options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls

  if impl(ghc > 8)
    GHC-options: -fno-warn-redundant-constraints
  if flag(server-coverage)
    GHC-Options: -fhpc

  Main-is: MailingServer.hs
  GHC-options: -main-is MailingServer

  Build-depends: base
               , AES
               , DRBG
               , HTTP
               , MissingH
               , aeson
               , base16-bytestring
               , base64-bytestring
               , binary
               , bytestring
               , cmdargs
               , cond
               , consumers
               , containers
               , crypto-api
               , cryptohash
               , data-default
               , hpqtypes-extras
               , deepseq
               , directory
               , exceptions
               , fields-json
               , filepath
               , hS3
               , happstack-server
               , happstack-static-routing
               , hashable
               , hedis
               , hpqtypes
               , json
               , lifted-async
               , lifted-base
               , log >= 0.5.4
               , monad-control
               , monad-time
               , mtl
               , network
               , process
               , process-extras
               , psqueues
               , resource-pool
               , scientific
               , semigroups
               , stm
               , tagsoup
               , template-haskell
               , text
               , time
               , transformers
               , transformers-base
               , unix
               , unjson
               , unordered-containers
               , utf8-string
               , vector
               , yaml

  Default-Language: Haskell2010
  Default-Extensions: BangPatterns
                    , ConstraintKinds
                    , DeriveDataTypeable
                    , DeriveFunctor
                    , DeriveGeneric
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NamedFieldPuns
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , PatternGuards
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TupleSections
                    , TypeFamilies
                    , TypeOperators
                    , TypeSynonymInstances
                    , UndecidableInstances

Executable messenger-server

  Hs-source-dirs: backend/messenger/inc backend/messenger/schema
                  backend/messenger/src
                  backend/misc/schema backend/misc/src

  GHC-Options: -Werror -Wall -fno-warn-type-defaults -fno-warn-deprecated-flags
  GHC-Options: -threaded -rtsopts
  ghc-prof-options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls

  if impl(ghc > 8)
    GHC-options: -fno-warn-redundant-constraints
  if flag(server-coverage)
    GHC-Options: -fhpc

  Main-is: MessengerServer.hs
  GHC-options: -main-is MessengerServer

  Build-depends: base
               , DRBG
               , MissingH
               , aeson
               , base16-bytestring
               , base64-bytestring
               , binary
               , bytestring
               , cmdargs
               , cond
               , consumers
               , containers
               , crypto-api
               , cryptohash
               , data-default
               , hpqtypes-extras
               , deepseq
               , directory
               , exceptions
               , fields-json
               , happstack-server
               , happstack-static-routing
               , hpqtypes
               , HTTP
               , iconv
               , json
               , lifted-base
               , log >= 0.5.4
               , monad-control
               , monad-time
               , mtl
               , network
               , process
               , process-extras
               , regex-tdfa
               , resource-pool
               , semigroups
               , stm
               , tagsoup
               , template-haskell
               , text
               , time
               , transformers
               , transformers-base
               , unix
               , unjson
               , utf8-string
               , yaml

  Default-Language: Haskell2010
  Default-Extensions: BangPatterns
                    , ConstraintKinds
                    , DeriveDataTypeable
                    , DeriveFunctor
                    , DeriveGeneric
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NamedFieldPuns
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , PatternGuards
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TupleSections
                    , TypeFamilies
                    , TypeOperators
                    , TypeSynonymInstances
                    , UndecidableInstances

Executable kontrakcja-test

  Hs-source-dirs: backend/cron/schema
                  backend/mailer/schema
                  backend/messenger/schema
                  backend/migrate/inc
                  backend/misc/schema
                  backend/server/schema
                  backend/test/src

  GHC-Options: -Werror -Wall -fno-warn-type-defaults -fno-warn-deprecated-flags
  GHC-Options: -threaded -rtsopts
  ghc-prof-options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls

  if impl(ghc > 8)
    GHC-options: -fno-warn-redundant-constraints
  if flag(test-coverage)
    GHC-Options: -fhpc

  Main-is: TestMain.hs
  GHC-options: -main-is TestMain

  Build-depends: kontrakcja
               , base
               , Decimal
               , HStringTemplate
               , HUnit
               , HaXml
               , MissingH
               , QuickCheck
               , aeson
               , base64-bytestring
               , binary
               , bytestring
               , cond
               , containers
               , data-default
               , hpqtypes-extras
               , directory
               , exceptions
               , fields-json
               , filepath
               , happstack-server
               , hpqtypes
               , json
               , kontrakcja-templates
               , lifted-base
               , log >= 0.5.4
               , monad-control
               , mtl
               , network-uri
               , recurly
               , regex-tdfa
               , semigroups
               , stm
               , tagsoup
               , test-framework
               , test-framework-hunit
               , test-framework-quickcheck2
               , text
               , threads
               , time
               , transformers
               , transformers-base
               , unjson
               , unordered-containers
               , utf8-string
               , vector

  Default-Language: Haskell2010
  Default-Extensions: BangPatterns
                    , ConstraintKinds
                    , DeriveDataTypeable
                    , DeriveFunctor
                    , DeriveGeneric
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NamedFieldPuns
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , PatternGuards
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TupleSections
                    , TypeFamilies
                    , TypeOperators
                    , TypeSynonymInstances
                    , UndecidableInstances

Executable localization

  Hs-source-dirs: backend/lib
                  backend/misc/src
                  localization/src

  GHC-Options: -Werror -Wall -fno-warn-type-defaults -fno-warn-deprecated-flags
  GHC-Options: -threaded -rtsopts
  ghc-prof-options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls

  if impl(ghc > 8)
    GHC-options: -fno-warn-redundant-constraints

  Main-Is: LocalizationMain.hs
  GHC-options: -main-is LocalizationMain

  Build-depends: base
               , base16-bytestring
               , cond
               , data-default
               , directory
               , exceptions
               , happstack-server
               , hpqtypes
               , kontrakcja-templates
               , lifted-base
               , mtl
               , split
               , utf8-string
               , template-haskell
               , text
               , time


  Default-Language: Haskell2010
  Default-Extensions: BangPatterns
                    , ConstraintKinds
                    , DeriveDataTypeable
                    , DeriveFunctor
                    , DeriveGeneric
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NamedFieldPuns
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , PatternGuards
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TupleSections
                    , TypeFamilies
                    , TypeOperators
                    , TypeSynonymInstances
                    , UndecidableInstances

Executable routinglist
  if flag(enable-routinglist)
    buildable:    True
  else
    buildable:    False

  Hs-source-dirs: backend/routinglist

  GHC-Options: -Werror -Wall -fno-warn-type-defaults -fno-warn-deprecated-flags
  GHC-Options: -threaded -rtsopts
  ghc-prof-options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls

  if impl(ghc > 8)
    GHC-options: -fno-warn-redundant-constraints

  Main-Is: RoutingListMain.hs
  GHC-options: -main-is RoutingListMain

  Build-depends: kontrakcja
               , base
               , happstack-server
               , happstack-static-routing
               , mtl

  Default-Language: Haskell2010
  Default-Extensions: BangPatterns
                    , ConstraintKinds
                    , DeriveDataTypeable
                    , DeriveFunctor
                    , DeriveGeneric
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NamedFieldPuns
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , PatternGuards
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TupleSections
                    , TypeFamilies
                    , TypeOperators
                    , TypeSynonymInstances
                    , UndecidableInstances

Executable screenshot-review

  Hs-source-dirs: backend/lib
                  backend/misc/src
                  backend/misc/schema
                  backend/server/schema
                  backend/messenger/inc
                  backend/messenger/schema
                  backend/mailer/schema
                  backend/migrate/inc
                  backend/cron/schema
                  backend/screenshot-review/

  GHC-Options: -Werror -Wall -fno-warn-type-defaults -fno-warn-deprecated-flags
  GHC-Options: -threaded -rtsopts
  ghc-prof-options: -fprof-auto -fno-prof-count-entries -fprof-auto-calls

  if impl(ghc > 8)
    GHC-options: -fno-warn-redundant-constraints

  Main-Is: ScreenshotReview.hs
  GHC-options: -main-is ScreenshotReview

  -- Cabal workaround, remove after transition to ghc8.
  if impl(ghc < 8)
    Build-depends: unix == 2.7.1.0
  else
    Build-depends: unix == 2.7.2.0

  Build-depends: AES
               , aeson
               , Crypto
               , DRBG
               , Decimal
               , HTTP
               , HaXml
               , MissingH
               , QuickCheck
               , base
               , base16-bytestring
               , base64-bytestring
               , binary
               , bytestring
               , cond
               , conduit
               , containers
               , crypto-api
               , cryptohash
               , data-default
               , db-extras
               , deepseq
               , digest
               , directory
               , exceptions
               , fields-json
               , filepath
               , hS3
               , happstack-server
               , hashable
               , hedis
               , hpqtypes
               , hpqtypes-extras
               , http-types
               , invariant
               , json
               , kontrakcja-templates
               , lifted-async
               , lifted-base
               , log >= 0.5.4
               , monad-control
               , monad-time
               , mtl
               , network
               , process
               , process-extras
               , psqueues
               , resource-pool
               , scientific
               , semigroups
               , split
               , stm
               , template-haskell
               , temporary
               , text
               , threads
               , time
               , transformers
               , transformers-base
               , unjson
               , unordered-containers
               , utf8-string
               , vector
               , xml-conduit
               , xml-types
               , yaml
               , zlib


  Default-Language: Haskell2010
  Default-Extensions: BangPatterns
                    , ConstraintKinds
                    , DeriveDataTypeable
                    , DeriveFunctor
                    , DeriveGeneric
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NamedFieldPuns
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , PatternGuards
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TupleSections
                    , TypeFamilies
                    , TypeOperators
                    , TypeSynonymInstances
                    , UndecidableInstances

Executable transifex
  Hs-source-dirs:   transifex
  Main-is:          Main.hs
  Other-Modules:    Transifex.Synch,
                    Transifex.Utils
  GHC-Options:      -Wall -Werror
  Build-Depends:    base,
                    fields-json,
                    json,
                    mtl,
                    old-locale,
                    old-time,
                    process
  Default-Language: Haskell2010

Executable detect_old_localizations
  Hs-source-dirs:   scripts/detect_old_localizations,
                    scripts/scripts-prelude
  Main-is:          detect_old_localizations.hs
  GHC-Options:      -Wall -Werror
  Build-Depends:    base,
                    containers,
                    directory,
                    language-javascript < 0.6,
                    regex-tdfa

  Default-Language: Haskell2010

Executable detect_old_templates
  Hs-source-dirs:   scripts/detect_old_templates,
                    scripts/scripts-prelude
                    transifex
  Main-is:          detect_old_templates.hs
  GHC-Options:      -Wall -Werror
  Build-Depends:    base,
                    containers,
                    directory,
                    fields-json,
                    haskell-src-exts < 1.17,
                    HStringTemplate,
                    json,
                    kontrakcja-templates,
                    mtl,
                    process,
                    old-time,
                    old-locale
  Default-Language: Haskell2010

Executable sort_imports
  Hs-source-dirs:   scripts/sort_imports
  Main-is:          sort_imports.hs
  GHC-Options:      -Wall -Werror
  Build-Depends:    base,
                    attoparsec,
                    containers,
                    directory,
                    text
  Default-Language: Haskell2010
